[package]
name = "rocket_empty"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Provides a 204 No Content responder for Rocket. Includes optional schema definition."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
schema = ["revolt_rocket_okapi", "revolt_okapi"]
default = []

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false }
revolt_okapi = { version = "0.9.1", optional = true, default-features = false }
revolt_rocket_okapi = { version = "0.9.1", optional = true, default-features = false }
